--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <main>
-<img class="hero" src="images/illustration-hero.svg">
+<img class="hero" src="images/illustration-hero.svg" alt="main-image">
   <h1 class="dark">Order Summary</h1>
 
   <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
